samples/_failures_safe/1761162100_cd353e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05c30b8b.c: In function ‘main’:
./samples/SAFE/__tmp_05c30b8b.c:157:17: error: expected declaration or statement at end of input
  157 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_05c30b8b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05c30b8b.c:157:17: error: expected declaration or statement at end of input
